# conch-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  GITHUB_DESCRIPTION.md  README.md  README.rst  build.sh  conanfile.py  run.sh
.github/workflows/: ci.yml
scripts/: build_vs2022.bat  run_tests.sh
src/apps/: CMakeLists.txt
src/apps/desktop_pro/: main.cpp  mainwindow.cpp
src/apps/snake_cli/: CMakeLists.txt  main.cpp  snake_game.cpp  snake_game.h
src/apps/snake_qt/: CMakeLists.txt  game_widget.cpp  game_widget.h  main.cpp
src/apps/stock_trader/: CMakeLists.txt  main.cpp  market_data.cpp  market_data.h  portfolio.cpp  portfolio.h
src/libs/foundation/include/foundation/: logger.h
src/libs/foundation/src/: logger.cpp
src/libs/network/: CMakeLists.txt
src/libs/ui_kit/: CMakeLists.txt
